<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_theory">

    <fragment
        android:id="@+id/navigation_theory"
        android:name="com.example.mobile.ui.theory.TheoryFragment"
        android:label="@string/theory"
        tools:layout="@layout/fragment_theory" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.example.mobile.ui.exercises.ExercisesFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/navigation_tests"
        android:name="com.example.mobile.ui.tests.TestsFragment"
        android:label="@string/tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.mobile.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mobile.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation> 